--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.2",
-    "next": "14.0.3",
+    "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "sass": "^1.69.5"
   },
   "devDependencies": {
